create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1287,6 +1287,7 @@ hr {
 }
 .cid-s3aKs1p9Ln .section-content-title {
   font-weight: 500;
+  color: #e1201d;
 }
 .cid-s3aKs1p9Ln .progress_value {
   position: relative;
