--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2658,6 +2658,72 @@ hr {
   border-top: 1px solid #EBEBEB;
   padding-top: 2rem;
 }
+.cid-s3aSKXwArV {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-s3aSKXwArV .col-sm-6 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .cid-s3aSKXwArV .card {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 767px) and (max-width: 992px) {
+  .cid-s3aSKXwArV .card {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s3aSKXwArV .card-wrapper {
+    padding: 0 1.5rem;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s3aSKXwArV .row {
+    margin: 0;
+  }
+}
+.cid-s3aSKXwArV .container {
+  border-top: 1px solid #EBEBEB;
+  padding-top: 2rem;
+}
+.cid-s3aSLNGaV2 {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-s3aSLNGaV2 .col-sm-6 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .cid-s3aSLNGaV2 .card {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 767px) and (max-width: 992px) {
+  .cid-s3aSLNGaV2 .card {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s3aSLNGaV2 .card-wrapper {
+    padding: 0 1.5rem;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s3aSLNGaV2 .row {
+    margin: 0;
+  }
+}
+.cid-s3aSLNGaV2 .container {
+  border-top: 1px solid #EBEBEB;
+  padding-top: 2rem;
+}
 .cid-rRBJerbUh5 .google-map {
   height: 34rem;
   position: relative;
