--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2261,7 +2261,7 @@ hr {
   margin-bottom: 4rem;
 }
 .cid-rRBIYdNH2I .mbr-section-subtitle {
-  color: #000000;
+  color: #ffffff;
   margin-bottom: 1.5rem;
 }
 .cid-rRBIYdNH2I .card-img {
@@ -2915,6 +2915,39 @@ hr {
   }
 }
 .cid-s3aSLNGaV2 .container {
+  border-top: 1px solid #EBEBEB;
+  padding-top: 2rem;
+}
+.cid-s3bUUMeCMq {
+  padding-top: 0px;
+  padding-bottom: 135px;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-s3bUUMeCMq .col-sm-6 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .cid-s3bUUMeCMq .card {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 767px) and (max-width: 992px) {
+  .cid-s3bUUMeCMq .card {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s3bUUMeCMq .card-wrapper {
+    padding: 0 1.5rem;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s3bUUMeCMq .row {
+    margin: 0;
+  }
+}
+.cid-s3bUUMeCMq .container {
   border-top: 1px solid #EBEBEB;
   padding-top: 2rem;
 }
