create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2436,10 +2436,10 @@ hr {
   object-fit: cover;
 }
 .cid-s38kJqyzPe P {
-  text-align: center;
+  text-align: left;
 }
 .cid-s38kJqyzPe .card-title {
-  text-align: center;
+  text-align: left;
 }
 .cid-s38kJqyzPe .card-img {
   position: relative;
