--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1451,188 +1451,49 @@ hr {
 .cid-s37SQLQciH .btn:hover {
   color: #ffffff !important;
 }
-.cid-s3aA4Ppr4i {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #efeeee;
+.cid-s3c12dD4JM {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
 }
-.cid-s3aA4Ppr4i .content-block {
-  max-width: 350px;
-  padding: 4rem 3rem;
-  z-index: 5;
-  position: relative;
+.cid-s3c12dD4JM .mbr-iconfont {
+  font-size: 34px;
+  transition: color .3s;
 }
-.cid-s3aA4Ppr4i .img-content {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  opacity: 0;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  transition: all 0.3s;
-  transition-delay: 0s;
-  background-image: url("../../../assets/images/1.jpg");
-  background-position: center;
-  background-size: cover;
-  z-index: 3;
+.cid-s3c12dD4JM .mbr-section-title {
+  margin: 0;
 }
-.cid-s3aA4Ppr4i .block2 {
-  background-image: url("../../../assets/images/24.jpg");
+.cid-s3c12dD4JM .card-img {
+  text-align: center;
 }
-.cid-s3aA4Ppr4i .block2:hover .block2-over {
-  opacity: 0;
+.cid-s3c12dD4JM .row-item {
+  padding-bottom: 2rem;
+  padding: 5rem 2rem;
 }
-.cid-s3aA4Ppr4i .block1 {
-  background-image: url("../../../assets/images/24.jpg");
+.cid-s3c12dD4JM .row-item.card1 {
+  background: #1dc9cb;
 }
-.cid-s3aA4Ppr4i .block1:hover .block1-over {
-  opacity: 0;
+.cid-s3c12dD4JM .row-item.card2 {
+  background: #188ef4;
 }
-.cid-s3aA4Ppr4i .block1-over {
-  position: absolute;
-  transition: all 0.6s;
-  width: 100%;
-  background-color: #b2ccd2;
-  opactiy: 1;
-  height: 100%;
-  top: 0;
-  left: 0;
+.cid-s3c12dD4JM .row-item.card3 {
+  background: #ff695c;
 }
-.cid-s3aA4Ppr4i .block2-over {
-  position: absolute;
-  transition: all 0.6s;
-  width: 100%;
-  background-color: #e1201d;
-  opactiy: 1;
-  height: 100%;
-  top: 0;
-  left: 0;
+.cid-s3c12dD4JM .row-item.card4 {
+  background: #2bdc9d;
 }
-.cid-s3aA4Ppr4i .overlay {
-  position: absolute;
-  transition: all 0.3s;
-  transition-delay: 0.3s;
-  width: 0%;
-  height: 100%;
-  top: 0;
-  right: 0%;
-  background: #232323;
-  z-index: 2;
-  opacity: 1;
-}
-.cid-s3aA4Ppr4i .overlay-wrapper {
-  width: 50%;
-  height: 100%;
-  position: absolute;
-  right: 50%;
-  transition-delay: 0.3s;
-  top: 0;
-  z-index: 4;
-}
-.cid-s3aA4Ppr4i .col {
-  padding: 0;
-  display: flex;
-  position: relative;
-  min-height: 400px;
-  justify-content: flex-end;
-}
-.cid-s3aA4Ppr4i .col:hover .overlay-wrapper {
-  width: 100%;
-  right: 0;
-  transition-delay: 0s;
-}
-.cid-s3aA4Ppr4i .col:hover .overlay {
-  width: 100%;
-  transition-delay: 0s;
-}
-.cid-s3aA4Ppr4i .col:hover .img-content {
-  opacity: 1;
-  width: 100%;
-  transition-delay: 0.3s;
-}
-.cid-s3aA4Ppr4i .col:hover .box-title2,
-.cid-s3aA4Ppr4i .col:hover .box-text2 {
-  color: #ffffff;
-  transition-delay: 0.3s;
-}
-.cid-s3aA4Ppr4i .box-title2,
-.cid-s3aA4Ppr4i .box-text2 {
-  transition: all 0.3s;
-  transition-delay: 0s;
-}
-.cid-s3aA4Ppr4i .box-content {
-  width: 50%;
-  height: 100%;
-  transition: all 0.3s;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  background: #232323;
-}
-.cid-s3aA4Ppr4i .content1 {
-  z-index: 5;
-  max-width: 450px;
-  position: relative;
-  transition: all 0.3s;
-  transition-delay: 0.3s;
-  padding: 4rem 3rem;
-}
-.cid-s3aA4Ppr4i .content2 {
-  z-index: 2;
-  max-width: 450px;
-  margin-bottom: -1rem;
-  position: relative;
-  opacity: 0;
-  transition: all 0.3s;
-  transition-delay: 0s;
-  padding: 0 2rem;
+.cid-s3c12dD4JM .mbr-text {
+  color: #efefef;
 }
 @media (max-width: 767px) {
-  .cid-s3aA4Ppr4i .img-content {
-    opacity: 1;
+  .cid-s3c12dD4JM .card-img,
+  .cid-s3c12dD4JM .mbr-text,
+  .cid-s3c12dD4JM .mbr-card-title,
+  .cid-s3c12dD4JM .mbr-section-subtitle,
+  .cid-s3c12dD4JM .mbr-section-title,
+  .cid-s3c12dD4JM .underline {
+    text-align: center !important;
   }
-  .cid-s3aA4Ppr4i .overlay-wrapper {
-    width: 100%;
-    right: 0;
-  }
-  .cid-s3aA4Ppr4i .box-content {
-    width: 100%;
-  }
-  .cid-s3aA4Ppr4i .box-title2,
-  .cid-s3aA4Ppr4i .box-text2 {
-    color: #ffffff !important;
-  }
-  .cid-s3aA4Ppr4i .content-block,
-  .cid-s3aA4Ppr4i .content1 {
-    padding: 3rem 1rem;
-  }
-}
-.cid-s3aA4Ppr4i .box-text1 {
-  color: #333333;
-}
-.cid-s3aA4Ppr4i .box-title2 {
-  color: #cccccc;
-}
-.cid-s3aA4Ppr4i .block1-text,
-.cid-s3aA4Ppr4i .mbr-section-btn {
-  color: #333333;
-}
-.cid-s3aA4Ppr4i .block2-text,
-.cid-s3aA4Ppr4i .mbr-section-btn {
-  color: #333333;
-}
-.cid-s3aA4Ppr4i .block2-title {
-  color: #ffffff;
-}
-.cid-s3aA4Ppr4i .block1-title {
-  color: #ffffff;
-}
-.cid-s3aA4Ppr4i .box-text2 {
-  color: #101010;
 }
 .cid-rRBILABAaP {
   padding-top: 90px;
@@ -2409,6 +2270,33 @@ hr {
   color: #101010;
   font-weight: 800;
 }
+.cid-s3bZBJE8CA {
+  padding-top: 75px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-s3bZBJE8CA h2 {
+    margin-bottom: 1rem;
+  }
+}
+@media (min-width: 767px) {
+  .cid-s3bZBJE8CA .container {
+    position: relative;
+  }
+  .cid-s3bZBJE8CA .row {
+    margin: 0;
+  }
+  .cid-s3bZBJE8CA h2 {
+    margin: 0;
+  }
+}
+.cid-s3bZBJE8CA .mbr-section-subtitle {
+  color: #e9204f;
+}
+.cid-s3bZBJE8CA .mbr-text {
+  margin-top: 1.4rem;
+}
 .cid-s38kJqyzPe {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -3156,4 +3044,284 @@ hr {
 }
 .cid-rQtQNcOfYq .media-container-row .mbr-text {
   color: #ffffff;
+}
+.cid-s3c1soAM6J.popup-builder {
+  background-color: #ffffff;
+}
+.cid-s3c1soAM6J.popup-builder .modal {
+  position: relative;
+  display: block;
+  z-index: 1;
+}
+.cid-s3c1soAM6J.popup-builder .modal-dialog {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.cid-s3c1soAM6J .modal-content,
+.cid-s3c1soAM6J .modal-dialog {
+  height: auto;
+}
+.cid-s3c1soAM6J .form-wrapper .input-group-btn {
+  margin-right: auto;
+  margin-left: auto;
+}
+.cid-s3c1soAM6J .form-wrapper .input-group-btn .btn {
+  margin: 0 !important;
+}
+@media (min-width: 769px) {
+  .cid-s3c1soAM6J .form-wrapper .mbr-form .form-group,
+  .cid-s3c1soAM6J .form-wrapper .mbr-form .input-group-btn {
+    padding: 0 .5rem;
+  }
+}
+.cid-s3c1soAM6J .card-img {
+  width: 100%;
+  margin: auto;
+  border-radius: 0;
+}
+.cid-s3c1soAM6J .mbr-figure img {
+  display: block;
+  width: 100%;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-s3c1soAM6J .mbr-text {
+  text-align: center;
+}
+.cid-s3c1soAM6J .pt-0 {
+  padding-top: 0 !important;
+}
+.cid-s3c1soAM6J .pb-0 {
+  padding-bottom: 0 !important;
+}
+.cid-s3c1soAM6J .form-content {
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-align: center;
+}
+.cid-s3c1soAM6J .mbr-overlay {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 0;
+  pointer-events: none;
+}
+.cid-s3c1soAM6J .modal-open {
+  overflow: hidden;
+}
+.cid-s3c1soAM6J .modal-open .modal {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.cid-s3c1soAM6J .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  outline: 0;
+}
+.cid-s3c1soAM6J .modal-dialog {
+  position: relative;
+  width: auto;
+  margin: .5rem;
+  pointer-events: none;
+}
+.cid-s3c1soAM6J .modal.fade .modal-dialog {
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  -webkit-transform: translate(0, -50px);
+  transform: translate(0, -50px);
+}
+.cid-s3c1soAM6J .modal.show .modal-dialog {
+  -webkit-transform: none;
+  transform: none;
+}
+.cid-s3c1soAM6J .modal-dialog-centered {
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  min-height: calc(100% - (.5rem * 2));
+}
+.cid-s3c1soAM6J .modal-dialog-centered::before {
+  display: block;
+  height: calc(100vh - (.5rem * 2));
+  content: "";
+}
+.cid-s3c1soAM6J .modal-content {
+  background: #000000;
+  position: relative;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-clip: padding-box;
+  border: none;
+  outline: 0;
+  -webkit-box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
+}
+.cid-s3c1soAM6J .modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1040;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+.cid-s3c1soAM6J .modal-backdrop.fade {
+  opacity: 0;
+}
+.cid-s3c1soAM6J .modal-backdrop.show {
+  opacity: .5;
+}
+.cid-s3c1soAM6J .modal-header {
+  display: flex;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 1rem;
+  border-bottom: none;
+}
+.cid-s3c1soAM6J .modal-header .close {
+  position: absolute;
+  top: auto;
+  right: 1rem;
+  margin: -1rem -1rem -1rem auto;
+  padding: 1rem;
+  opacity: .75;
+}
+.cid-s3c1soAM6J .modal-header .close:hover {
+  opacity: 1;
+}
+.cid-s3c1soAM6J .modal-header .close:focus {
+  outline: none;
+}
+.cid-s3c1soAM6J .modal-title {
+  line-height: 1.5;
+  width: 100%;
+  margin: 0;
+  text-align: center;
+}
+.cid-s3c1soAM6J .modal-body {
+  position: relative;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 1rem;
+  min-height: 100%;
+}
+.cid-s3c1soAM6J .modal-footer {
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 1rem;
+  border-top: none;
+  text-align: center;
+}
+.cid-s3c1soAM6J .modal-scrollbar-measure {
+  position: absolute;
+  top: -9999px;
+  width: 50px;
+  height: 50px;
+  overflow: scroll;
+}
+@media (min-width: 576px) {
+  .cid-s3c1soAM6J .modal-dialog {
+    max-width: 500px;
+    margin: 1.75rem auto;
+  }
+  .cid-s3c1soAM6J .modal-dialog-centered {
+    min-height: calc(100% - (1.75rem * 2));
+  }
+  .cid-s3c1soAM6J .modal-dialog-centered::before {
+    height: calc(100vh - (1.75rem * 2));
+  }
+  .cid-s3c1soAM6J .modal-sm {
+    max-width: 300px;
+  }
+  .cid-s3c1soAM6J .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s3c1soAM6J .modal-lg,
+  .cid-s3c1soAM6J .modal-xl {
+    max-width: 800px;
+  }
+  .cid-s3c1soAM6J .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .cid-s3c1soAM6J .modal-xl {
+    max-width: 1140px;
+  }
+  .cid-s3c1soAM6J .container {
+    max-width: 1140px;
+  }
+}
+.cid-s3c1soAM6J .container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+@media (min-width: 768px) {
+  .cid-s3c1soAM6J .container {
+    max-width: 720px;
+  }
+}
+.cid-s3c1soAM6J .row {
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.cid-s3c1soAM6J .col-md-4 {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  -ms-flex: 0 0 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+}
+.cid-s3c1soAM6J .form-group {
+  margin-bottom: 1rem;
+}
+.cid-s3c1soAM6J .form-control {
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+.cid-s3c1soAM6J .col {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+}
+.cid-s3c1soAM6J .col-md-auto {
+  position: relative;
+  padding-right: 15px;
+  padding-left: 15px;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  width: auto;
+  max-width: 100%;
 }
