create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1631,6 +1631,7 @@ hr {
   width: 100%;
   margin: 0;
   text-align: center;
+  color: #e1201d;
 }
 .cid-s3c1soAM6J .modal-body {
   position: relative;
@@ -2543,7 +2544,7 @@ hr {
   margin-right: 1rem;
 }
 .cid-rRBIYdNH2I .mbr-author-desc {
-  color: #e9204f;
+  color: #e1201d;
   font-weight: 500;
 }
 .cid-rRBIYdNH2I .mbr-text,
