create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2875,6 +2875,7 @@ hr {
 }
 .cid-s3aw2R54YV H1 {
   text-align: center;
+  color: #ffffff;
 }
 .cid-s3b7uDNsK8 {
   padding-top: 90px;
@@ -3018,6 +3019,7 @@ hr {
 .cid-s3b7uDNsK8 .mbr-section-title,
 .cid-s3b7uDNsK8 .mbr-gallery-filter ul {
   text-align: center;
+  color: #000000;
 }
 .cid-s3b4h5O5Av {
   padding-top: 30px;
