create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2866,6 +2866,7 @@ hr {
 }
 .cid-s3aw2R54YV .card-title {
   text-align: center;
+  color: #e1201d;
 }
 .cid-s3aw2R54YV H3 {
   text-align: center;
