--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -903,7 +903,7 @@ hr {
   }
 }
 .cid-rQtQGRgRNk .navbar.navbar-short {
-  background: #000000 !important;
+  background: #fff !important;
   min-height: 60px;
   opacity: 0.9;
 }
