--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -903,9 +903,10 @@ hr {
   }
 }
 .cid-rQtQGRgRNk .navbar.navbar-short {
-  background: #fff !important;
-  min-height: 60px;
-  opacity: 0.9;
+ background: rgba(255,255,255,0.8);
+ -webkit-backdrop-filter: saturate(180%) blur(20px);
+ backdrop-filter: saturate(180%) blur(20px);
+ min-height: 60px;  
 }
 .cid-rQtQGRgRNk .navbar.navbar-short .navbar-logo img {
   height: 3rem !important;
