--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1340,6 +1340,122 @@ hr {
     max-width: 100%;
   }
 }
+.cid-srZhyPR81L {
+  overflow: hidden;
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #0d0f1c;
+}
+.cid-srZhyPR81L .container {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+.cid-srZhyPR81L .image-wrapper {
+  max-width: 200%;
+  z-index: 1;
+  position: absolute;
+  top: -10%;
+  left: 50%;
+}
+.cid-srZhyPR81L .image-wrapper .img1 {
+  max-width: 200%;
+}
+.cid-srZhyPR81L .main-phrase {
+  z-index: 7;
+  position: relative;
+  margin-bottom: 150px;
+}
+.cid-srZhyPR81L .link-wrap {
+  z-index: 9000;
+}
+.cid-srZhyPR81L .link-wrap a {
+  z-index: 9000;
+}
+@media (max-width: 992px) {
+  .cid-srZhyPR81L .sep {
+    display: none;
+  }
+  .cid-srZhyPR81L .mbr-iconfont {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .cid-srZhyPR81L .link-wrap {
+    text-align: center;
+  }
+}
+.cid-srZhyPR81L a {
+  display: inline-block;
+  color: #ff8f00 !important;
+  line-height: 1;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.cid-srZhyPR81L a:not(:first-child) {
+  margin-left: 20px;
+}
+.cid-srZhyPR81L a:after {
+  position: absolute;
+  margin-top: 7px;
+  background-color: currentColor;
+  display: block;
+  content: "";
+  height: 2px;
+  width: 100%;
+}
+.cid-srZhyPR81L a::before {
+  position: absolute;
+  margin-top: 5px;
+  background-color: currentColor;
+  display: block;
+  content: "";
+  height: 2px;
+  width: 0%;
+  bottom: 7px;
+}
+.cid-srZhyPR81L a:hover:after,
+.cid-srZhyPR81L a:focus:after {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-name: slidein;
+  animation-name: slidein;
+}
+.cid-srZhyPR81L a:hover:before,
+.cid-srZhyPR81L a:focus:before {
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-animation-name: slideout;
+  animation-name: slideout;
+}
+.cid-srZhyPR81L .separator {
+  margin-bottom: 1px;
+  margin-top: 30px;
+}
+.cid-srZhyPR81L .separator .sep-holder {
+  width: 100%;
+  height: 2px;
+  position: relative;
+  -webkit-box-flex: 1;
+  min-width: 10%;
+}
+.cid-srZhyPR81L .separator .sep-holder .sep-line {
+  border-top-width: 2px;
+  border-color: #e7e7e7;
+  height: 1px;
+  border-top: 2px solid #ebebeb;
+  position: relative;
+  top: 1px;
+}
+.cid-srZhyPR81L .mbr-iconfont {
+  font-size: 2rem;
+}
+.cid-srZhyPR81L .text {
+  z-index: 10;
+}
 .cid-srrhIpYvzB {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1434,6 +1550,219 @@ hr {
 .cid-srrhIpYvzB .card-link {
   color: #000000;
 }
+.cid-srZgzLC2SB {
+  background-color: #ffffff;
+}
+.cid-srZgzLC2SB .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-srZgzLC2SB .carousel-item > div {
+  width: 100%;
+}
+.cid-srZgzLC2SB h4 {
+  margin-top: 1rem;
+  margin-bottom: 1.3rem;
+  font-weight: 900;
+}
+.cid-srZgzLC2SB .mbr-iconfont {
+  font-size: 1.5rem;
+  color: #fff;
+  opacity: 0;
+  transition: 0.7s;
+}
+.cid-srZgzLC2SB .carousel-item.active,
+.cid-srZgzLC2SB .carousel-item-next,
+.cid-srZgzLC2SB .carousel-item-prev {
+  display: flex;
+}
+.cid-srZgzLC2SB .carousel-controls a {
+  transition: opacity 0.5s;
+  font-size: 1.2rem;
+}
+.cid-srZgzLC2SB .carousel-controls a span {
+  padding: 15px;
+  border-radius: 50%;
+  opacity: 0.9;
+}
+.cid-srZgzLC2SB .carousel-controls a:hover span {
+  opacity: 1;
+}
+@media (min-width: 768px) {
+  .cid-srZgzLC2SB .carousel-controls a {
+    width: 5%;
+  }
+}
+.cid-srZgzLC2SB .mbr-section-subtitle {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  color: #70747f;
+}
+.cid-srZgzLC2SB .mbr-text {
+  position: relative;
+}
+.cid-srZgzLC2SB li {
+  background-color: transparent;
+  width: 11px;
+  height: 11px;
+  border: 1px solid #e0e0e0 !important;
+  margin-left: 0.4rem;
+  margin-right: 0.4rem;
+}
+.cid-srZgzLC2SB li.active {
+  background-color: #e9204f;
+  width: 14px;
+  height: 14px;
+  border: none !important;
+}
+.cid-srZgzLC2SB .carousel-indicators {
+  position: absolute;
+  margin-top: 2rem;
+  bottom: 0rem;
+  align-items: center;
+}
+.cid-srZgzLC2SB ol {
+  margin-bottom: 0;
+}
+.cid-srZgzLC2SB .carousel-indicators li {
+  border: none;
+  border-radius: 50%;
+}
+.cid-srZgzLC2SB .carousel {
+  display: flex;
+  overflow: hidden;
+  padding-bottom: 4rem;
+}
+@media (max-width: 767px) {
+  .cid-srZgzLC2SB {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .cid-srZgzLC2SB .col-md-3 {
+    padding: 0;
+  }
+  .cid-srZgzLC2SB .img-card {
+    padding: 0;
+  }
+  .cid-srZgzLC2SB .title-block {
+    margin: 2rem 1rem;
+    z-index: 2;
+  }
+  .cid-srZgzLC2SB .mbr-iconfont {
+    opacity: 1;
+  }
+  .cid-srZgzLC2SB .wrapper-img {
+    z-index: 1;
+  }
+  .cid-srZgzLC2SB .signature {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .desk {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .mbr-text {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .date {
+    color: #ffffff;
+  }
+}
+@media (min-width: 767px) {
+  .cid-srZgzLC2SB {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .cid-srZgzLC2SB .title-block {
+    margin: 2.5rem 3rem 2rem 2.5rem;
+  }
+  .cid-srZgzLC2SB .wrapper-img {
+    z-index: -1;
+  }
+  .cid-srZgzLC2SB .desk {
+    color: #e9204f;
+  }
+  .cid-srZgzLC2SB .signature {
+    color: #101010;
+  }
+  .cid-srZgzLC2SB .img-block:hover img {
+    transform: scale(1.05);
+  }
+  .cid-srZgzLC2SB .img-block:hover .mbr-iconfont {
+    opacity: 1;
+  }
+  .cid-srZgzLC2SB .img-block:hover .wrapper-img {
+    z-index: 1;
+  }
+  .cid-srZgzLC2SB .img-block:hover .title-block {
+    z-index: 2;
+  }
+  .cid-srZgzLC2SB .img-block:hover .signature {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .img-block:hover .desk {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .img-block:hover .mbr-text {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .img-block:hover .date {
+    color: #ffffff;
+  }
+  .cid-srZgzLC2SB .img-block:hover::after {
+    opacity: 0;
+  }
+}
+.cid-srZgzLC2SB .title-block {
+  position: relative;
+  z-index: 10;
+}
+.cid-srZgzLC2SB .desk {
+  font-weight: 700;
+}
+.cid-srZgzLC2SB .img-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  transition: 0.3s;
+}
+.cid-srZgzLC2SB .img-block::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  transition: 0.3s;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #ffffff;
+  opacity: 1;
+  z-index: 0;
+}
+.cid-srZgzLC2SB .date {
+  margin-top: 3.5rem;
+}
+.cid-srZgzLC2SB .wrapper-img {
+  position: absolute;
+  background-color: #000000;
+  transition: cubic-bezier(0.17, 0.67, 0, 1.01);
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+.cid-srZgzLC2SB img {
+  transition: 0.7s;
+  opacity: 0.3;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+@media (max-width: 992px) {
+  .cid-srZgzLC2SB .img-card {
+    margin-top: 2rem;
+  }
+}
 .cid-s3ceU9Jx7Y .number-wrap {
   color: #ffffff;
   border-color: rgba(255, 255, 255, 0.15);
@@ -1523,6 +1852,154 @@ hr {
   }
   .cid-s3ceU9Jx7Y .period {
     font-size: 0.7rem;
+  }
+}
+.cid-srZgOIl6wK {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #101010;
+}
+@media (max-width: 992px) {
+  .cid-srZgOIl6wK {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .cid-srZgOIl6wK .box {
+    margin-top: 2.5rem;
+    height: 300px;
+  }
+  .cid-srZgOIl6wK .video-block {
+    padding: 0rem;
+  }
+  .cid-srZgOIl6wK .row {
+    padding: 0rem;
+  }
+  .cid-srZgOIl6wK .left-block {
+    padding: 2rem 1rem;
+  }
+}
+.cid-srZgOIl6wK .btn {
+  margin-left: 0rem;
+}
+.cid-srZgOIl6wK .box {
+  background-image: url("../../../assets/images/office-3.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-srZgOIl6wK .icon-wrap {
+  border: 3px solid #ffffff !important;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  transform: perspective(1px) translateZ(0);
+  transition: all 0.3s ease-in-out !important;
+}
+.cid-srZgOIl6wK .icon-wrap:hover span {
+  color: #ffffff;
+}
+.cid-srZgOIl6wK .icon-wrap::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: scaleY(0);
+  transform-origin: 50% 0;
+  transition-property: transform;
+  transition: 0.6s;
+  transition-timing-function: cubic-bezier(0.4, 0.67, 0, 1.01);
+}
+.cid-srZgOIl6wK .icon-wrap:hover::before {
+  background-color: #e1201d;
+  transform: scaleY(1);
+}
+.cid-srZgOIl6wK .mbr-media span {
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+  color: #e9204f;
+}
+.cid-srZgOIl6wK .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-35%);
+}
+.cid-srZgOIl6wK .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-srZgOIl6wK .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-srZgOIl6wK .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-srZgOIl6wK a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-srZgOIl6wK a.close:hover {
+  color: #ffffff;
+}
+@media (max-width: 576px) {
+  .cid-srZgOIl6wK {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+}
+.cid-srZgOIl6wK .mbr-text {
+  margin-bottom: 2rem;
+}
+.cid-srZgOIl6wK .mbr-section-title {
+  margin-bottom: 2rem;
+}
+@media (min-width: 767px) and (max-width: 992px) {
+  .cid-srZgOIl6wK .left-block {
+    padding: 5rem 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-srZgOIl6wK .video-block {
+    padding-right: 0rem;
+  }
+  .cid-srZgOIl6wK .row {
+    padding-right: 0rem;
+  }
+  .cid-srZgOIl6wK .left-block {
+    padding: 7.5rem 5.5rem 7.5rem 5rem;
+  }
+  .cid-srZgOIl6wK .box {
+    height: 100%;
   }
 }
 .cid-s3aKs1p9Ln {
