--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,5 @@
 @font-face {
-   font-family: 'GmarketSansBold';
+   font-family: 'GmarketSansLight';
    font-display: swap;
-   src: url('GmarketSansBold/font.woff');
-}
-@font-face {
-   font-family: 'GmarketSansMedium';
-   font-display: swap;
-   src: url('GmarketSansMedium/font.woff');
+   src: url('GmarketSansLight/font.woff');
 }
