--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2,7 +2,7 @@ body {
   font-family: Roboto;
 }
 .display-1 {
-  font-family: 'GmarketSansBold';
+  font-family: 'GmarketSansLight';
   font-size: 4.9rem;
   font-weight: 800;
   letter-spacing: -2px;
@@ -11,7 +11,7 @@ body {
   font-size: 7.84rem;
 }
 .display-2 {
-  font-family: 'GmarketSansBold';
+  font-family: 'GmarketSansLight';
   font-size: 3rem;
   line-height: 1.2;
   font-weight: 700;
@@ -20,7 +20,7 @@ body {
   font-size: 4.8rem;
 }
 .display-4 {
-  font-family: 'GmarketSansBold';
+  font-family: 'GmarketSansLight';
   font-size: 0.9rem;
   line-height: 1.4;
   font-weight: 400;
@@ -29,7 +29,7 @@ body {
   font-size: 1.44rem;
 }
 .display-5 {
-  font-family: 'GmarketSansBold';
+  font-family: 'GmarketSansLight';
   font-size: 1.5rem;
   line-height: 1.4;
 }
@@ -37,12 +37,12 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'GmarketSansMedium';
-  font-size: 1rem;
+  font-family: 'GmarketSansLight';
+  font-size: 0.8rem;
   line-height: 1.5;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.28rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -522,12 +522,12 @@ a:hover {
 }
 /* Scroll to top button*/
 .form-control {
-  font-family: 'GmarketSansMedium';
-  font-size: 1rem;
+  font-family: 'GmarketSansLight';
+  font-size: 0.8rem;
   line-height: 1.5;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.28rem;
 }
 blockquote {
   border-color: #e1201d;
@@ -1109,6 +1109,136 @@ hr {
     padding-right: 2rem;
   }
 }
+.cid-sxIOnUevw3 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.cid-sxIOnUevw3 .carousel {
+  width: 100%;
+}
+.cid-sxIOnUevw3 .carousel-inner {
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+.cid-sxIOnUevw3 .carousel-item img {
+  height: 100vh;
+  object-fit: cover;
+}
+.cid-sxIOnUevw3 .mbr-overlay {
+  z-index: 1;
+}
+.cid-sxIOnUevw3 .carousel-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  height: 35%;
+  overflow: hidden;
+  bottom: 0;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 100px 50px;
+}
+@media (max-width: 767px) {
+  .cid-sxIOnUevw3 .carousel-caption {
+    height: 59.5%;
+  }
+}
+.cid-sxIOnUevw3 .carousel-control {
+  display: inline-flex;
+  width: 2rem;
+  height: 2rem;
+  transition: all 0.3s;
+  top: calc(50% + 35%/2 + 1rem);
+  transform: translateY(-50%);
+  left: 0;
+  margin-left: 50px;
+  color: #e1201d;
+  opacity: 1;
+}
+.cid-sxIOnUevw3 .carousel-control.carousel-control-next {
+  margin-left: 100px;
+}
+.cid-sxIOnUevw3 .carousel-control > span {
+  font-size: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-sxIOnUevw3 .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sxIOnUevw3 .carousel-control:hover {
+  opacity: 0.6;
+}
+.cid-sxIOnUevw3 .item-wrapper {
+  width: 100%;
+}
+.cid-sxIOnUevw3 .mbr-section-subtitle,
+.cid-sxIOnUevw3 .slider-subtitle {
+  margin-bottom: 30px;
+}
+.cid-sxIOnUevw3 .caption-text {
+  margin-bottom: 20.4px;
+}
+@media (max-width: 767px) {
+  .cid-sxIOnUevw3 .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-sxIOnUevw3 .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-sxIOnUevw3 .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-sxIOnUevw3 .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-sxIOnUevw3 .carousel-indicators li.active,
+.cid-sxIOnUevw3 .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-sxIOnUevw3 .carousel-indicators li::after,
+.cid-sxIOnUevw3 .carousel-indicators li::before {
+  content: none;
+}
+.cid-sxIOnUevw3 .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-sxIOnUevw3 .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-sxIOnUevw3 H5 {
+  color: #e9ddd8;
+  text-align: left;
+}
+.cid-sxIOnUevw3 .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sxIOnUevw3 P {
+  color: #ffffff;
+}
 .cid-s37Fokdkk4 {
   padding-top: 240px;
   padding-bottom: 0px;
@@ -1254,6 +1384,59 @@ hr {
   .cid-srrh5D96qC .align-center {
     text-align: center;
   }
+}
+.cid-sxINTl3AIB {
+  background: #000000;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.cid-sxINTl3AIB h3 {
+  margin-bottom: 0 !important;
+}
+.cid-sxINTl3AIB figcaption {
+  position: relative;
+}
+.cid-sxINTl3AIB figcaption .wrap {
+  position: absolute;
+  bottom: 0rem;
+  width: 100%;
+  padding: 1rem 2rem;
+  transition: all 0.3s;
+  z-index: 3;
+}
+.cid-sxINTl3AIB img {
+  width: 100%;
+  transition: all 3s;
+  opacity: 0.5;
+}
+@media (min-width: 767px) {
+  .cid-sxINTl3AIB .row {
+    margin: 0;
+  }
+}
+@media (max-width: 992px) {
+  .cid-sxINTl3AIB .image-block-1 {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sxINTl3AIB .img-big {
+    height: 100%;
+  }
+  .cid-sxINTl3AIB .image-block-1 {
+    height: 100%;
+  }
+}
+.cid-sxINTl3AIB .image-block-2 {
+  margin-bottom: 2rem;
+}
+.cid-sxINTl3AIB .image-block {
+  filter: brightness(100%) contrast(100%) saturate(0%) blur(0px) hue-rotate(0deg);
+  position: relative;
+  background-color: #000;
+}
+.cid-sxINTl3AIB .image-block:hover {
+  filter: brightness(100%) contrast(100%) saturate(100%) blur(0px) hue-rotate(0deg);
 }
 .cid-s3aw7OTyF2 {
   padding-top: 0px;
@@ -1455,6 +1638,138 @@ hr {
 }
 .cid-srZhyPR81L .text {
   z-index: 10;
+}
+.cid-srZkdTL2o9 {
+  background-color: #131419;
+}
+.cid-srZkdTL2o9 .mbr-text,
+.cid-srZkdTL2o9 .mbr-section-btn {
+  color: #bbbbbb;
+}
+.cid-srZkdTL2o9 .content-wrapper {
+  max-width: 350px;
+}
+.cid-srZkdTL2o9 .mbr-section-btn {
+  padding-bottom: 8rem;
+}
+.cid-srZkdTL2o9 .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-srZkdTL2o9 .mbr-iconfont {
+  color: #ffffff;
+  font-size: 1.2rem;
+  transition: all 0.3s;
+}
+.cid-srZkdTL2o9 .icons-wrapper {
+  position: absolute;
+  display: flex;
+  bottom: 4rem;
+  width: fit-content;
+  right: 4rem;
+}
+@media (max-width: 767px) {
+  .cid-srZkdTL2o9 .icons-wrapper {
+    right: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+.cid-srZkdTL2o9 .icon-wrapper {
+  position: relative;
+  width: 35px;
+  cursor: pointer;
+  margin: 0 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+}
+.cid-srZkdTL2o9 .icon-wrapper:hover .mbr-iconfont {
+  color: #e1201d;
+}
+.cid-srZkdTL2o9 .mbr-section-title {
+  color: #ffffff;
+}
+.cid-srZkhkdJPY {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  background-image: url("../../../assets/images/bg4.jpg");
+}
+.cid-srZkhkdJPY .mbr-section-title {
+  margin-bottom: 0;
+}
+.cid-srZkhkdJPY .bottom__block {
+  margin-top: 30px;
+}
+.cid-srZkhkdJPY .bottom__block .mbr-text {
+  font-weight: 500;
+}
+.cid-srZkhkdJPY .bottom__block .bottom__text {
+  opacity: .7;
+  margin-top: 15px;
+  display: block;
+  width: 100%;
+}
+.cid-srZkhkdJPY .mbr-figure {
+  margin: 95px 0 80px;
+}
+@media (max-width: 991px) {
+  .cid-srZkhkdJPY .mbr-figure {
+    margin: 50px 0 20px;
+  }
+}
+.cid-srZkhkdJPY .mbr-media span {
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #ea3223;
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+  color: #ffffff;
+}
+.cid-srZkhkdJPY .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-35%);
+}
+.cid-srZkhkdJPY .mbr-media span:hover {
+  transform: scale(1.08);
+}
+.cid-srZkhkdJPY .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-srZkhkdJPY .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-srZkhkdJPY .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-srZkhkdJPY a.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 16px;
+  background: #000;
+  padding: 10px;
+  transition: all 0.2s;
+}
+.cid-srZkhkdJPY a.close:hover {
+  color: #ffffff;
 }
 .cid-srrhIpYvzB {
   padding-top: 0px;
